[gd_scene load_steps=10 format=3 uid="uid://b2dwadfarubyi"]

[ext_resource type="Script" path="res://src/scripts/game-scripts/biom-scripts/hub-scripts/keyfand-hub.gd" id="1_l6ymf"]
[ext_resource type="Texture2D" uid="uid://cegkk22scg3eb" path="res://src/ui/backgrounds/hub-backgrounds/Гоблины(Keyfand).png" id="2_w5iiv"]
[ext_resource type="VideoStream" path="res://src/ui/backgrounds/hub-backgrounds/Гоблины(Keyfand).ogv" id="3_y5nl5"]
[ext_resource type="Texture2D" uid="uid://cedpmviec6lf" path="res://src/ui/buttons/bottom.png" id="4_hig1p"]
[ext_resource type="Texture2D" uid="uid://cymhkw2j7tc4d" path="res://src/ui/elements/New item.png" id="5_uiak5"]
[ext_resource type="Texture2D" uid="uid://hmnv24ih5u62" path="res://src/ui/buttons/bottom off 3.png" id="6_3gqcf"]
[ext_resource type="Texture2D" uid="uid://b1im4ry4rnu28" path="res://src/ui/buttons/support green.png" id="7_snw2l"]
[ext_resource type="Texture2D" uid="uid://b3hxg141ochmh" path="res://src/ui/buttons/back_button.png" id="8_hah6c"]
[ext_resource type="Texture2D" uid="uid://cwqetyj7kwiqu" path="res://src/ui/backgrounds/battle_step.png" id="9_wltwj"]

[node name="Keyfand-Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6ymf")
metadata/_edit_use_anchors_ = true

[node name="BackGround-Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_w5iiv")
expand_mode = 1
stretch_mode = 6

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.6
stretch_mode = 3

[node name="BackGround-Video" type="VideoStreamPlayer" parent="AspectRatioContainer"]
layout_mode = 2
stream = ExtResource("3_y5nl5")
autoplay = true
expand = true
loop = true
metadata/_edit_use_anchors_ = true

[node name="Go-Battle-Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -713.0
offset_right = -239.0
offset_bottom = -713.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.06, 1.06)

[node name="Battle" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 183.0
offset_top = 910.0
offset_right = 295.0
offset_bottom = 1020.0

[node name="Battle" type="TextureButton" parent="Go-Battle-Buttons/Battle"]
layout_mode = 2
texture_normal = ExtResource("4_hig1p")
texture_pressed = ExtResource("4_hig1p")
texture_hover = ExtResource("4_hig1p")
texture_focused = ExtResource("4_hig1p")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 209.0
offset_top = 930.0
offset_right = 268.0
offset_bottom = 990.0

[node name="Battle1" type="TextureButton" parent="Go-Battle-Buttons/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("5_uiak5")
texture_pressed = ExtResource("5_uiak5")
texture_hover = ExtResource("5_uiak5")
texture_focused = ExtResource("5_uiak5")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle2" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 331.132
offset_top = 723.585
offset_right = 443.132
offset_bottom = 833.585

[node name="Battle2" type="TextureButton" parent="Go-Battle-Buttons/Battle2"]
layout_mode = 2
texture_normal = ExtResource("6_3gqcf")
texture_pressed = ExtResource("6_3gqcf")
texture_hover = ExtResource("6_3gqcf")
texture_focused = ExtResource("6_3gqcf")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle3" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 57.5472
offset_top = 670.755
offset_right = 169.547
offset_bottom = 780.755

[node name="Battle3" type="TextureButton" parent="Go-Battle-Buttons/Battle3"]
layout_mode = 2
texture_normal = ExtResource("6_3gqcf")
texture_pressed = ExtResource("6_3gqcf")
texture_hover = ExtResource("6_3gqcf")
texture_focused = ExtResource("6_3gqcf")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle5" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 217.925
offset_top = 640.566
offset_right = 329.925
offset_bottom = 750.566

[node name="Battle5" type="TextureButton" parent="Go-Battle-Buttons/Battle5"]
layout_mode = 2
texture_normal = ExtResource("6_3gqcf")
texture_pressed = ExtResource("6_3gqcf")
texture_hover = ExtResource("6_3gqcf")
texture_focused = ExtResource("6_3gqcf")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle6" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 269.811
offset_top = 431.132
offset_right = 381.811
offset_bottom = 541.132

[node name="Battle6" type="TextureButton" parent="Go-Battle-Buttons/Battle6"]
layout_mode = 2
texture_normal = ExtResource("6_3gqcf")
texture_pressed = ExtResource("6_3gqcf")
texture_hover = ExtResource("6_3gqcf")
texture_focused = ExtResource("6_3gqcf")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle7" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 100.0
offset_top = 525.472
offset_right = 212.0
offset_bottom = 635.472

[node name="Battle7" type="TextureButton" parent="Go-Battle-Buttons/Battle7"]
layout_mode = 2
texture_normal = ExtResource("6_3gqcf")
texture_pressed = ExtResource("6_3gqcf")
texture_hover = ExtResource("6_3gqcf")
texture_focused = ExtResource("6_3gqcf")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle8" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 187.736
offset_top = 283.019
offset_right = 299.736
offset_bottom = 393.019

[node name="Battle8" type="TextureButton" parent="Go-Battle-Buttons/Battle8"]
layout_mode = 2
texture_normal = ExtResource("6_3gqcf")
texture_pressed = ExtResource("6_3gqcf")
texture_hover = ExtResource("6_3gqcf")
texture_focused = ExtResource("6_3gqcf")
ignore_texture_size = true
stretch_mode = 0

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -5.0
offset_right = 2.0
offset_bottom = -788.0
grow_horizontal = 2
grow_vertical = 2

[node name="HelpContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 439.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = 61.0
grow_horizontal = 2

[node name="HelpButton" type="TextureButton" parent="UI/HelpContainer"]
layout_mode = 2
texture_normal = ExtResource("7_snw2l")
texture_pressed = ExtResource("7_snw2l")
texture_hover = ExtResource("7_snw2l")
texture_focused = ExtResource("7_snw2l")
ignore_texture_size = true
stretch_mode = 0

[node name="BackButtonContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
offset_left = 12.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 69.0

[node name="BackButton" type="TextureButton" parent="UI/BackButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("8_hah6c")
texture_pressed = ExtResource("8_hah6c")
texture_hover = ExtResource("8_hah6c")
texture_focused = ExtResource("8_hah6c")
ignore_texture_size = true
stretch_mode = 0

[node name="Elborus" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 16.0
offset_right = 102.0
offset_bottom = 62.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="UI/Elborus"]
layout_mode = 2
texture = ExtResource("9_wltwj")

[node name="Elborus" type="Label" parent="UI/Elborus"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "1/10"
horizontal_alignment = 1

[connection signal="pressed" from="Go-Battle-Buttons/Battle/Battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/MarginContainer/Battle1" to="." method="_on_battle_1_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle2/Battle2" to="." method="_on_battle_2_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle3/Battle3" to="." method="_on_battle_3_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle5/Battle5" to="." method="_on_battle_5_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle6/Battle6" to="." method="_on_battle_6_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle7/Battle7" to="." method="_on_battle_7_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle8/Battle8" to="." method="_on_battle_8_pressed"]
[connection signal="pressed" from="UI/BackButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
